--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
-    "next": "14.2.0",
+    "next": "16.0.7",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.10",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.51.0",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1"
@@ -28,11 +28,11 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "16.0.7",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
